--- a/InterpretBank Terminology Provider/InterpretBank/InterpretBank.csproj
+++ b/InterpretBank Terminology Provider/InterpretBank/InterpretBank.csproj
@@ -57,6 +57,9 @@
     <Reference Include="Sdl.Core.Globalization">
       <HintPath>$(TradosFolder)\Sdl.Core.Globalization.dll</HintPath>
     </Reference>
+	  <Reference Include="Microsoft.Bcl.AsyncInterfaces">
+		  <HintPath>$(TradosFolder)\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
+	  </Reference>
     <Reference Include="Sdl.Core.Globalization.Async">
       <HintPath>$(TradosFolder)\Sdl.Core.Globalization.Async.dll</HintPath>
     </Reference>
