--- a/LanguageWeaverProvider/LanguageWeaverProvider.csproj
+++ b/LanguageWeaverProvider/LanguageWeaverProvider.csproj
@@ -57,6 +57,7 @@
 	<ItemGroup>
 	  <None Remove="Resources\Feedback_Default.png" />
 	  <None Remove="Resources\Feedback_Notification.png" />
+	  <None Remove="Resources\Information.png" />
 	  <None Remove="Resources\lwHeader_Cloud.png" />
 	  <None Remove="Resources\lwHeader_Edge.png" />
 	  <None Remove="Resources\lwHeader_Main.png" />
@@ -70,7 +71,6 @@
 	  <None Remove="Resources\lwLogo_Main16.png" />
 	  <None Remove="Resources\lwLogo_Main32.png" />
 	  <None Remove="Resources\Report.xsl" />
-	  <None Remove="Resources\Warning.png" />
 	</ItemGroup>
 	
 	<ItemGroup>
@@ -172,20 +172,23 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="LanguageMappingProvider" Version="1.0.92" />
+		<PackageReference Include="LanguageMappingProvider" >
+			<Version>1.0.107</Version>
+		</PackageReference>
 		<PackageReference Include="Sdl.Core.PluginFramework">
 			<Version>2.1.0</Version>
 		</PackageReference>
 		<PackageReference Include="Sdl.Core.PluginFramework.Build">
 			<Version>17.0.0</Version>
 		</PackageReference>
-		<PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
+		<PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <EmbeddedResource Include="Resources\Report.xsl" />
 	  <Resource Include="Resources\Feedback_Default.png" />
 	  <Resource Include="Resources\Feedback_Notification.png" />
+	  <Resource Include="Resources\Information.png" />
 	  <Resource Include="Resources\lwHeader_Cloud.png" />
 	  <Resource Include="Resources\lwHeader_Edge.png" />
 	  <Resource Include="Resources\lwHeader_Main.png" />
