--- a/Language Weaver Provider/LanguageWeaverProvider.csproj
+++ b/Language Weaver Provider/LanguageWeaverProvider.csproj
@@ -216,4 +216,8 @@
 	    <DependentUpon>PluginResources.resx</DependentUpon>
 	  </Compile>
 	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Infrastructure\" />
+	</ItemGroup>
 </Project>
