--- a/Code samples/AdvancedDisplayFilter/Sdl.Community.AdvancedDisplayFilter.csproj
+++ b/Code samples/AdvancedDisplayFilter/Sdl.Community.AdvancedDisplayFilter.csproj
@@ -1,116 +1,74 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
-  <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>11.0.3344.0</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{1CBF7231-A95E-43A5-942E-49D3A9C99D4A}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Sdl.Community.AdvancedDisplayFilter</RootNamespace>
-    <AssemblyName>Sdl.Community.AdvancedDisplayFilter</AssemblyName>
-    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
-    <FileUpgradeFlags>
-    </FileUpgradeFlags>
-    <UpgradeBackupLocation>
-    </UpgradeBackupLocation>
-    <OldToolsVersion>2.0</OldToolsVersion>
-    <SccProjectName>SAK</SccProjectName>
-    <SccLocalPath>SAK</SccLocalPath>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccProvider>SAK</SccProvider>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
-    <PluginDeploymentPath>$(AppData)\Sdl\Sdl Trados Studio\15\Plugins</PluginDeploymentPath>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE;STUDIO2015</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-  </PropertyGroup>
+<Project Sdk="Microsoft.NET.Sdk">
+	<PropertyGroup>
+		<TargetFramework>net48</TargetFramework>
+		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\19beta\Plugins</PluginDeploymentPath>
+		<CreatePluginPackage>true</CreatePluginPackage>
+		<AssemblyOriginatorKeyFile>SdlCommunity.snk</AssemblyOriginatorKeyFile>
+		<TradosFolder>$(ProgramFiles)\Trados\Trados Studio\Studio19beta</TradosFolder>
+		<SignAssembly>true</SignAssembly>
+	</PropertyGroup>
+	<ItemGroup>
+	  <PackageReference Include="Sdl.Core.PluginFramework" Version="2.1.0" />
+	  <PackageReference Include="Sdl.Core.PluginFramework.Build" Version="18.0.1" />
+	  <PackageReference Include="Trados.Community.Toolkit.FileType" Version="6.0.2" />
+	</ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="MoreLinq, Version=1.4.18916.0, Culture=neutral, PublicKeyToken=384d532d7e88985d, processorArchitecture=MSIL">
-      <HintPath>packages\morelinq.1.4.0\lib\net35\MoreLinq.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="PresentationCore" />
-    <Reference Include="Sdl.Community.Toolkit.FileType, Version=1.8.2.0, Culture=neutral, PublicKeyToken=15236fec901153ed, processorArchitecture=MSIL">
-      <HintPath>packages\Sdl.Community.Toolkit.FileType.1.8.2\lib\net45\Sdl.Community.Toolkit.FileType.dll</HintPath>
-    </Reference>
-    <Reference Include="Sdl.Core.Globalization, Version=1.8.0.0, Culture=neutral, PublicKeyToken=c28cdb26c445c888, processorArchitecture=MSIL">
+    <Reference Include="Sdl.Core.Globalization">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>$(ProgramFiles)\SDL\SDL Trados Studio\Studio15\Sdl.Core.Globalization.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>$(TradosFolder)\Sdl.Core.Globalization.dll</HintPath>
     </Reference>
     <Reference Include="Sdl.Core.PluginFramework">
       <HintPath>packages\Sdl.Core.PluginFramework.1.8.0\lib\net45\Sdl.Core.PluginFramework.dll</HintPath>
-      <Private>False</Private>
+     
     </Reference>
-    <Reference Include="Sdl.Core.PluginFramework.PackageSupport">
-      <HintPath>packages\Sdl.Core.PluginFramework.1.8.0\lib\net45\Sdl.Core.PluginFramework.PackageSupport.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Sdl.Desktop.IntegrationApi, Version=4.0.0.0, Culture=neutral, PublicKeyToken=c28cdb26c445c888, processorArchitecture=MSIL">
+    <Reference Include="Sdl.Desktop.IntegrationApi">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>$(ProgramFiles)\SDL\SDL Trados Studio\Studio15\Sdl.Desktop.IntegrationApi.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>$(TradosFolder)\Sdl.Desktop.IntegrationApi.dll</HintPath>
+     
     </Reference>
     <Reference Include="Sdl.Desktop.IntegrationApi.Extensions">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>$(ProgramFiles)\SDL\SDL Trados Studio\Studio15\Sdl.Desktop.IntegrationApi.Extensions.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>$(TradosFolder)\Sdl.Desktop.IntegrationApi.Extensions.dll</HintPath>
+     
     </Reference>
-    <Reference Include="Sdl.FileTypeSupport.Framework.Core, Version=1.0.0.0, Culture=neutral, PublicKeyToken=c28cdb26c445c888, processorArchitecture=MSIL">
+    <Reference Include="Sdl.FileTypeSupport.Framework.Core">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>$(ProgramFiles)\SDL\SDL Trados Studio\Studio15\Sdl.FileTypeSupport.Framework.Core.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>$(TradosFolder)\Sdl.FileTypeSupport.Framework.Core.dll</HintPath>
+     
     </Reference>
     <Reference Include="Sdl.ProjectAutomation.Core">
-      <HintPath>$(ProgramFiles)\SDL\SDL Trados Studio\Studio15\Sdl.ProjectAutomation.Core.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>$(TradosFolder)\Sdl.ProjectAutomation.Core.dll</HintPath>
+     
     </Reference>
     <Reference Include="Sdl.ProjectAutomation.FileBased">
-      <HintPath>$(ProgramFiles)\SDL\SDL Trados Studio\Studio15\Sdl.ProjectAutomation.FileBased.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>$(TradosFolder)\Sdl.ProjectAutomation.FileBased.dll</HintPath>
+     
     </Reference>
     <Reference Include="Sdl.TellMe.ProviderApi">
-      <HintPath>$(ProgramFiles)\SDL\SDL Trados Studio\Studio15\Sdl.TellMe.ProviderApi.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>$(TradosFolder)\Sdl.TellMe.ProviderApi.dll</HintPath>
+     
     </Reference>
     <Reference Include="Sdl.TranslationStudioAutomation.IntegrationApi">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>$(ProgramFiles)\SDL\SDL Trados Studio\Studio15\Sdl.TranslationStudioAutomation.IntegrationApi.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>$(TradosFolder)\Sdl.TranslationStudioAutomation.IntegrationApi.dll</HintPath>
+     
     </Reference>
     <Reference Include="Sdl.TranslationStudioAutomation.IntegrationApi.Extensions">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>$(ProgramFiles)\SDL\SDL Trados Studio\Studio15\Sdl.TranslationStudioAutomation.IntegrationApi.Extensions.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>$(TradosFolder)\Sdl.TranslationStudioAutomation.IntegrationApi.Extensions.dll</HintPath>
+     
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Reactive">
+      <HintPath>$(TradosFolder)\System.Reactive.dll</HintPath>
+    </Reference>
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System" />
     <Reference Include="System.Core">
@@ -118,149 +76,12 @@
     </Reference>
     <Reference Include="System.Xml" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Actions\FilterSourceAction.cs" />
-    <Compile Include="Actions\FilterTargetAction.cs" />
-    <Compile Include="Controls\AddCommentAction.cs" />
-    <Compile Include="Controls\AddCommentWindow.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Controls\AddCommentWindow.Designer.cs">
-      <DependentUpon>AddCommentWindow.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Controls\ComboBoxItem.cs" />
-    <Compile Include="Controls\CommunityApplicationInitializer.cs" />
-    <Compile Include="Controls\DisplayFilterControl.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Controls\DisplayFilterControl.Designer.cs">
-      <DependentUpon>DisplayFilterControl.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Controls\DisplayFilterController.cs" />
-    <Compile Include="Controls\FilterExpression.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Controls\FilterExpression.Designer.cs">
-      <DependentUpon>FilterExpression.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Actions\FilterSelectionAction.cs" />
-    <Compile Include="Controls\ListViewExtended.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="Controls\ListViewItemComparer.cs" />
-    <Compile Include="DisplayFilters\CustomFilterSettings.cs" />
-    <Compile Include="DisplayFilters\DisplayFilter.cs" />
-    <Compile Include="DisplayFilters\DisplayFilterSettings.cs" />
-    <Compile Include="Extensions\DisplayFilterRowInfoExtension.cs" />
-    <Compile Include="Helpers\ColorPickerHelper.cs" />
-    <Compile Include="Helpers\CommentsHelper.cs" />
-    <Compile Include="Helpers\CommentVisitor.cs" />
-    <Compile Include="Helpers\SegmentTypesHelper.cs" />
-    <Compile Include="PluginResources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>PluginResources.resx</DependentUpon>
-    </Compile>
-    <Compile Include="Services\CustomFilterService.cs" />
-    <Compile Include="Helpers\FuzzyHelper.cs" />
-    <Compile Include="Helpers\SegmentTextVisitor.cs" />
-    <Compile Include="Helpers\TagDataVisitor.cs" />
-    <Compile Include="Helpers\SegmentNumbersHelper.cs" />
-    <Compile Include="Helpers\TagVisitor.cs" />
-    <Compile Include="Helpers\TranslationOriginMetaDataVisitor.cs" />
-    <Compile Include="Helpers\XliffParser.cs" />
-    <Compile Include="Models\BackReference.cs" />
-    <Compile Include="Models\CapturedGroup.cs" />
-    <Compile Include="Models\DisplayFilterSerializer.cs" />
-    <Compile Include="Controls\Helper.cs" />
-    <Compile Include="Models\HighlightColor.cs" />
-    <Compile Include="Models\SavedSettings.cs" />
-    <Compile Include="Models\SegmentRange.cs" />
-    <Compile Include="Properties\PluginProperties.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\ContentMatchingService.cs" />
-    <Compile Include="Services\HighlightService.cs" />
-    <Compile Include="Services\QualitySamplingService.cs" />
-    <Compile Include="StringResources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>StringResources.resx</DependentUpon>
-    </Compile>
-    <Compile Include="TellMe\AdvancedDisplayFilterTellMeProvider.cs" />
-    <Compile Include="TellMe\CommunityForumAction.cs" />
-    <Compile Include="TellMe\HelpAction.cs" />
-    <Compile Include="TellMe\OpenAdvancedDisplayFilter.cs" />
-    <Compile Include="TellMe\OpenProjectFilesAction.cs" />
-    <Compile Include="TellMe\StoreAction.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="3rd party\Cyotek.Windows.Forms.ColorPicker.dll" />
-    <Content Include="Images\AdvancedDisplayFilter.ico" />
-    <EmbeddedResource Include="Resources\filter_selection.ico" />
-    <EmbeddedResource Include="Resources\filter_source.ico" />
-    <EmbeddedResource Include="Resources\filter_target.ico" />
-    <EmbeddedResource Include="Controls\AddCommentWindow.resx">
-      <DependentUpon>AddCommentWindow.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Resources\AddComment.ico" />
-    <EmbeddedResource Include="Resources\OpenFiles.ico" />
-    <EmbeddedResource Include="Resources\Download.ico" />
-    <EmbeddedResource Include="Resources\ForumIcon.ico" />
-    <EmbeddedResource Include="Resources\Question.ico" />
-    <EmbeddedResource Include="Resources\File.ico" />
-    <EmbeddedResource Include="Resources\eyedropper.png" />
-    <None Include="..\SdlCommunity.snk">
-      <Link>SdlCommunity.snk</Link>
-    </None>
-    <None Include="app.config" />
-    <None Include="Images\ok.32x32.png" />
-    <None Include="Images\ok.ico" />
-    <EmbeddedResource Include="PluginResources.resx">
-      <SubType>Designer</SubType>
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>PluginResources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-    <Content Include="Images\Parenthesis.jpg" />
-    <None Include="Images\rounded-yellow.png" />
-    <None Include="Images\rounded-black.png" />
-    <None Include="Images\rounded-blue.png" />
-    <None Include="Images\rounded-cyan.png" />
-    <None Include="Images\rounded-darkBlue.png" />
-    <None Include="Images\rounded-darkCyan.png" />
-    <None Include="Images\rounded-darkGray.png" />
-    <None Include="Images\rounded-darkGreen.png" />
-    <None Include="Images\rounded-darkMagenta.png" />
-    <None Include="Images\rounded-darkRed.png" />
-    <None Include="Images\rounded-darkYellow.png" />
-    <None Include="Images\rounded-green.png" />
-    <None Include="Images\rounded-lightGray.png" />
-    <None Include="Images\rounded-magenta.png" />
-    <None Include="Images\rounded-red.png" />
-    <Content Include="pluginpackage.manifest.xml">
-      <SubType>Designer</SubType>
-    </Content>
-    <None Include="packages.config">
-      <SubType>Designer</SubType>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Controls\DisplayFilterControl.resx">
-      <DependentUpon>DisplayFilterControl.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Controls\FilterExpression.resx">
-      <DependentUpon>FilterExpression.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="StringResources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <SubType>Designer</SubType>
-      <LastGenOutput>StringResources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-  </ItemGroup>
+  
+  
+  
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
-  <ItemGroup />
   <PropertyGroup>
     <CreatePluginPackage>true</CreatePluginPackage>
   </PropertyGroup>
@@ -268,20 +89,7 @@
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>..\SdlCommunity.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>..\..\SdlCommunity.snk</AssemblyOriginatorKeyFile>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <Import Project="packages\Sdl.Core.PluginFramework.Build.15.1.0\build\Sdl.Core.PluginFramework.Build.targets" Condition="Exists('packages\Sdl.Core.PluginFramework.Build.15.1.0\build\Sdl.Core.PluginFramework.Build.targets')" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('packages\Sdl.Core.PluginFramework.Build.15.1.0\build\Sdl.Core.PluginFramework.Build.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Sdl.Core.PluginFramework.Build.15.1.0\build\Sdl.Core.PluginFramework.Build.targets'))" />
-  </Target>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>-->
 </Project>
